--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,11 +6,31 @@
     android:orientation="vertical"
     tools:context=".MainActivity" >
 
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="wrap_content" android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_marginTop="80dp">
+
+        <EditText android:text="Nombre del plato"
+            android:id="@+id/buscarET"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="fill_parent">
+        </EditText>
+        <Button android:text="Buscar"
+            android:id="@+id/buscarBoton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </Button>
+
+    </LinearLayout>
+
     <ListView
         android:id="@+id/customListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="70dp">
+        android:layout_marginTop="20dp">
     </ListView>
 
 </LinearLayout>
