--- a/app/src/main/res/layout/custom.xml
+++ b/app/src/main/res/layout/custom.xml
@@ -23,6 +23,7 @@
 
         <TextView
             android:id="@+id/idrestaurante"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
