--- a/app/src/main/res/layout/custom_nutri.xml
+++ b/app/src/main/res/layout/custom_nutri.xml
@@ -16,6 +16,7 @@
 
         <TextView
             android:id="@+id/id_infon"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
